# julie

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjectFiles.py  GenerateSourcesLists.py  LocalConfig.cmake  Rules.txt  notes.sln
src/app/: CMakeLists.txt
src/app/res/shaders/: LightColor.fs  MaterialColorNormals.fs  MaterialColorShader.fs  MaterialColorShader.vs  MaterialTextureNormals.fs  MaterialTextureNormals.vs  MaterialTextureShader.fs  SimpleColor.fs  SimpleColor.vs  SimpleTexture.fs  _ShaderComposer.py
src/app/res/ui/: EditableVec3Widget.ui  PropertiesWidget.ui  ViewPropertiesWidget.ui
src/app/src/: CommonDefs.hpp  Main.cpp
src/app/src/controllers/: FreeflyCameraController.cpp  FreeflyCameraController.hpp
src/app/src/core/: GameCore.cpp  GameCore.hpp  Id.cpp  Id.hpp
src/app/src/data/: ObjectWrapper.cpp  ObjectWrapper.hpp  SceneWrapper.cpp  SceneWrapper.hpp
src/app/src/managers/: InputManager.cpp  InputManager.hpp
src/app/src/save_restore/: JsonProjectRestorer.cpp  JsonProjectRestorer.hpp  JsonProjectSaver.cpp  JsonProjectSaver.hpp  JsonStrings.hpp
src/app/src/ui/: AppGlWidget.cpp  AppGlWidget.hpp  EntitiesWidget.cpp  EntitiesWidget.hpp  IEntityActionHandler.hpp  MainWindow.cpp  MainWindow.hpp  MetaTypes.hpp  PropertiesWidget.cpp  PropertiesWidget.hpp  UiUtils.hpp  ViewPropertiesWidget.cpp  ViewPropertiesWidget.hpp
src/application/: CMakeLists.txt  EM.json  Headers.cmake  InitSources.cmake  RM.json  SM.json  Shaders.cmake  Sources.cmake  UiSources.cmake
src/application/res/: Notes.qrc
src/application/res/models/: Rect.nfg
src/application/res/shaders/: LightColor.fs  LightColor.vs  LightTexture.fs  MaterialColorShader.fs  MaterialShader.fs  MaterialTextureShader.fs  NormalShader.fs  NormalShader.vs  NormalShaderFS.fs  NormalShaderVS.vs  ReflectionShader.fs  ReflectionShader.vs  ReflectionShaderFS.fs  ReflectionShaderVS.vs  ShaderComposer.py  SimpleColor.fs  SimpleColor.vs  SimpleTexture.fs  SimpleTexture.vs  SkyBoxShader.fs  SkyBoxShader.vs  SkyBoxShaderFS.fs  SkyBoxShaderVS.vs  TerrainShader.fs  TerrainShader.vs  TerrainShaderFS.fs  TerrainShaderVS.vs  TriangleShader.fs  TriangleShader.vs  TriangleShaderFS.fs  TriangleShaderVS.vs  UVdisplacementShader.fs  UVdisplacementShader.vs  UVdisplacementShaderFS.fs  UVdisplacementShaderVS.vs  WaterShader.fs  WaterShader.vs  WaterShaderFS.fs  WaterShaderVS.vs
src/application/res/textures/: envMap.tga
src/application/res/ui/: EditableResourcePathWidget.ui  EditableVec4Widget.ui  EntitiesWidget.ui  MainWidget.ui  MainWindow.ui  Page1.ui.qml  Page3.ui.qml  PropertiesWidget.ui  ViewPropertiesWidget.ui
src/application/src/: AppGlWidget.cpp  AppUtils.cpp  AppUtils.hpp  CommonDefs.hpp  CommonIncludes.hpp  InputManager.cpp  InputManager.hpp  Main.cpp  MainWidget.cpp  MainWidget.hpp  Model.cpp  Model.hpp  Object.cpp  Object.hpp  ObjectWrapper.cpp  ObjectWrapper.hpp  Sandbox.cpp  Sandbox.hpp  Types.hpp
src/application/src/controllers/: AppController.cpp  AppController.hpp  FreeflyCameraController.cpp  FreeflyCameraController.hpp
src/application/src/core/: Id.cpp  Id.hpp
src/application/src/data/: DataEntity.cpp  DataEntity.hpp  Material.cpp  Material.hpp  Object.cpp  Object.hpp  ObjectWrapper.cpp  ObjectWrapper.hpp  Project.cpp  Project.hpp  SceneWrapper.cpp  SceneWrapper.hpp  ShaderData.cpp  ShaderData.hpp  ShaderEntity.hpp
src/application/src/factories/: ModelsFactory.cpp  ShadersFactory.cpp  ShadersFactory.hpp  TexturesFactory.cpp  TexturesFactory.hpp
src/application/src/logic/: ResourceManager.cpp  ResourceManager.hpp  Sandbox.cpp  Sandbox.hpp
src/application/src/managers/: InputManager.cpp  InputManager.hpp  MaterialsManager.cpp  MaterialsManager.hpp  ResourceManager.cpp  ResourceManager.hpp
src/application/src/save_restore/: ISceneSaver.hpp  JsonProjectRestorer.cpp  JsonProjectRestorer.hpp  JsonProjectSaver.cpp  JsonProjectSaver.hpp  JsonSceneRestorer.cpp  JsonSceneRestorer.hpp  JsonSceneSaver.cpp  JsonSceneSaver.hpp  JsonStrings.hpp
src/application/src/ui/: AppGlWidget.cpp  AppGlWidget.hpp  EditableResourcePathWidget.cpp  EditableVec3Widget.cpp  EditableVec3Widget.hpp  EditableVec4Widget.cpp  EntitiesWidget.cpp  EntitiesWidget.hpp  IEntityActionHandler.hpp  MainWidget.cpp  MainWidget.hpp  MainWindow.cpp  MainWindow.hpp  PropertiesWidget.cpp  PropertiesWidget.hpp  PropertyTypes.hpp  PropertyValueDelegate.cpp  PropertyValueDelegate.hpp  UiUtils.hpp  ViewPropertiesWidget.cpp
src/core/: CMakeLists.txt  InitSources.cmake
src/core/src/nodes/: HierarchyNode.cpp  NodesFactory.cpp  Note.cpp  NotesFolder.cpp
src/julie/: CMakeLists.txt
src/julie/include/julie/: Axis.hpp  CubeTexture.hpp  Entity.hpp  Globals.hpp  IntersectionsDetectionHelpers.hpp  Material.hpp  Mesh.hpp  Model.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  TextureBase.hpp  TextureFiltering.hpp  Types.hpp  UniformType.hpp  Vertex.hpp
src/julie/src/: CubeTexture.cpp  Globals.cpp  IntersectionsDetectionHelpers.cpp  Material.cpp  Mesh.cpp  MeshImpl.cpp  MeshImpl.hpp  Model.cpp  PropertyBinder.hpp  Renderer.cpp  Shader.cpp  Texture.cpp  TextureBase.cpp
src/julie/src/core/: Id.cpp
src/julie/src/creation_helpers/: ModelCreationHelper.cpp  ModelCreationHelper.hpp  ShaderCreationHelper.cpp  ShaderCreationHelper.hpp
src/julie/src/ecs/: ComponentsContainerRef.cpp  ComponentsMgr.cpp  EntitiesMgr.cpp  Entity.cpp  RenderSystem.cpp  TransformProcessSystem.cpp
src/julie/src/formats/: stb_image.cpp
src/julie/src/managers/: AppController.cpp  MaterialsManager.cpp  ResourceManager.cpp
src/julie/src/primitives/: IndexBuffer.cpp  IndexBuffer.hpp  (+4 more)
src/renderer/: CMakeLists.txt  Headers.cmake  Sources.cmake
src/renderer/src/: ConvertingHelper.cpp  ConvertingHelper.hpp  CubeTexture.cpp  Globals.cpp  IntersectionsDetectionHelpers.cpp  Material.cpp  Mesh.cpp  Model.cpp  PropertyBinder.hpp  Renderer.cpp  Shader.cpp  Texture.cpp  TextureBase.cpp
src/tests/utils_tests/: CMakeLists.txt  Headers.cmake  Sources.cmake
src/utils/: CMakeLists.txt  Headers.cmake  InitSources.cmake  Sources.cmake
src/utils/src/: Assert.cpp  Logger.cpp
(+447 files in other folders)
